--- a/app-docker/argo/cluster.yaml
+++ b/app-docker/argo/cluster.yaml
@@ -11,6 +11,6 @@ spec:
   source:
     directory:
       recurse: true
-    path: cluster
-    repoURL: https://github.com/siamaksade/openshift-gitops-getting-started
+    path: app-docker/cluster
+    repoURL: https://github.com/masp2r/argocd-poc.git
     targetRevision: HEAD
