--- a/app-docker/app/kustomization.yaml
+++ b/app-docker/app/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-- deployment.yaml
-- service.yaml
-- route.yaml
+- /app-docker/app/deployment.yaml
+- /app-docker/app/service.yaml
+- /app-docker/app/route.yaml
