--- a/app-docker/argo/app.yaml
+++ b/app-docker/argo/app.yaml
@@ -1,18 +1,18 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-spring-petclinic
+  name: app-app-docker
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: spring-petclinic
+    namespace: app-docker
     server: https://kubernetes.default.svc
   project: default
   source:
     directory:
       recurse: true
-    path: app
-    repoURL: https://github.com/siamaksade/openshift-gitops-getting-started.git
+    path: app-docker/app
+    repoURL: https://github.com/masp2r/argocd-poc.git
     targetRevision: main
   syncPolicy:
     automated:
