--- a/app-docker/cluster/namespace/app-docker-rolebinding.yaml
+++ b/app-docker/cluster/namespace/app-docker-rolebinding.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: spring-petclinic-role-binding
-  namespace: spring-petclinic
+  name: app-docker-role-binding
+  namespace: app-docker
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
