--- a/argo/cluster.yaml
+++ b/argo/cluster.yaml
@@ -12,5 +12,5 @@ spec:
     directory:
       recurse: true
     path: cluster
-    repoURL: https://github.com/siamaksade/openshift-gitops-getting-started
+    repoURL: https://github.com/masp2r/argocd-poc.git
     targetRevision: HEAD
