--- a/spring-boot/argo/cluster.yaml
+++ b/spring-boot/argo/cluster.yaml
@@ -1,20 +1,16 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: app-app-docker
+  name: cluster-configs
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: app-docker
+    namespace: default
     server: https://kubernetes.default.svc
   project: default
   source:
     directory:
       recurse: true
-    path: app-docker/app
+    path: spring-boot/cluster
     repoURL: https://github.com/masp2r/argocd-poc.git
-    targetRevision: main
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+    targetRevision: spring-boot
