--- a/app/deployment.yaml
+++ b/app/deployment.yaml
@@ -3,27 +3,27 @@ kind: Deployment
 metadata:
   annotations:
   labels:
-    app: app-docker
+    app: spring-boot
     app.kubernetes.io/component: web
-    app.kubernetes.io/instance: app-docker
-    app.kubernetes.io/name: app-docker
-    app.kubernetes.io/part-of: app-docker
+    app.kubernetes.io/instance: spring-boot
+    app.kubernetes.io/name: spring-boot
+    app.kubernetes.io/part-of: spring-boot
     app.openshift.io/runtime: java
-  name: app-docker
+  name: spring-boot
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: app-docker
+      app: spring-boot
   template:
     metadata:
       labels:
-        app: app-docker
+        app: spring-boot
     spec:
       containers:
-      - name: app-docker
+      - name: spring-boot
         imagePullPolicy: Always
-        image: docker.io/masp2r/argocd-poc:latest
+        image: quay.io/jacob_mastroianni/spring-boot:latest
         livenessProbe:
           failureThreshold: 3
           httpGet:
