--- a/spring-boot/app/service.yaml
+++ b/spring-boot/app/service.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: app-docker
-  name: app-docker
+    app: spring-boot
+  name: spring-boot
 spec:
   ports:
   - name: 8080-tcp
@@ -19,6 +19,6 @@ spec:
     protocol: TCP
     targetPort: 8778
   selector:
-    app: app-docker
+    app: spring-boot
   sessionAffinity: None
   type: ClusterIP
