--- a/spring-boot/argo/app.yaml
+++ b/spring-boot/argo/app.yaml
@@ -1,16 +1,20 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: cluster-configs
+  name: app-spring-boot
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: default
+    namespace: spring-boot
     server: https://kubernetes.default.svc
   project: default
   source:
     directory:
       recurse: true
-    path: app-docker/cluster
+    path: spring-boot/app
     repoURL: https://github.com/masp2r/argocd-poc.git
-    targetRevision: HEAD
+    targetRevision: spring-boot
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
