--- a/spring-boot/cluster/namespace/app-docker-rolebinding.yaml
+++ b/spring-boot/cluster/namespace/app-docker-rolebinding.yaml
@@ -1,8 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: app-docker-role-binding
-  namespace: app-docker
+  name: spring-boot-role-binding
+  namespace: spring-boot
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
