--- a/spring-boot/kustomization.yaml
+++ b/spring-boot/kustomization.yaml
@@ -1,4 +1,4 @@
 resources:
-- /app-docker/app/deployment.yaml
-- /app-docker/app/service.yaml
-- /app-docker/app/route.yaml
+- deployment.yaml
+- service.yaml
+- route.yaml
